# volatility_skew_prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_collection.ipynb
src/volatility_skew_prediction/: data_loader.py  iv_calculator.py  perf_metrics.py  skew_calculator.py  strategy.py
